force-app/main/default/objects/Session_Registration__c/fields/Public_Events__c.field-meta.xml
<CustomField>
    <fullName>Public_Events__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Public Event Name</label>
    <referenceTo>Public_Event__c</referenceTo>
    <relationshipLabel>Session Registrations</relationshipLabel>
    <relationshipName>Session_Registrations</relationshipName>
    <type>Lookup</type>
</CustomField>