force-app/main/default/objects/Session_Registration__c/fields/Session_Name__c.field-meta.xml
<CustomField>
    <fullName>Session_Name__c</fullName>
    <label>Session Name</label>
    <referenceTo>Sessions__c</referenceTo>
    <relationshipLabel>Session Registrations</relationshipLabel>
    <relationshipName>Session_Registrations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>